# vcb-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
pine/: vcb_strategy.pine
src/vcb/: __init__.py  cli.py  engine.py  extract.py  report.py  strategies.py  transform.py
tests/: test_pipeline.py
